:art: [FIX] Fix cover height on small screens and changing the grid properties in companies container

--- a/estilos.css
+++ b/estilos.css
@@ -6,6 +6,7 @@
 	--light-color-span: #d7f1ff;
 	--font-size: 1.8rem;
 }
+
 * {
 	margin: 0;
 	padding: 0;
@@ -149,6 +150,7 @@ body {
   inset: 4px;
   border-radius: 16px;
 }
+
 .cover .cover__desc-engineer {
 	font-size: 4rem;
 	position: relative;
@@ -207,7 +209,6 @@ body {
 	border-radius: 20px;
 	overflow: hidden;
 }
-
 .about__desciption::before {
 	content: '';
   position: absolute;
@@ -218,8 +219,7 @@ body {
   background: linear-gradient(to right, var(--light-color), var(--light-color), var(--highlight-color), var(--highlight-color));
   animation: animate 10s linear infinite;
 	z-index: 0;
-} 
-
+}
 .about__desciption::after {
 	content: '';
   position: absolute;
@@ -460,21 +460,20 @@ aside a {
 
 .companies__container {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-	margin: 0 auto;
+	padding: 0 5px;
+	gap: 0.5rem;
+	grid-auto-rows: 20rem;
+	grid-template-columns: repeat(auto-fill, minmax(min( 100%, 18rem), 1fr));
 }
 
 .companies__container div {
-	width: 20vw;
-	height: 20vw;
 	justify-self: center;
 	align-self: center;
 }
 
 .companies__container img {
-	width: 20vw;
-	height: 20vw;
+	width: 18rem;
+	height: 18rem;
 	filter: grayscale(100%);
 	transition: 0.3s;
 }
@@ -483,54 +482,6 @@ aside a {
 	filter: grayscale(0);
 }
 
-.companies__container div:nth-child(1) {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-.companies__container div:nth-child(2) {
-	grid-column: 2 / 3;
-  grid-row: 1 / 2;
-}
-.companies__container div:nth-child(3) {
-	grid-column: 3 / 4;
-  grid-row: 1 / 2;
-}
-.companies__container div:nth-child(4) {
-	grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
-.companies__container div:nth-child(5) {
-	grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
-.companies__container div:nth-child(6) {
-	grid-column: 3 / 4;
-  grid-row: 2 / 3;
-}
-.companies__container div:nth-child(7) {
-  grid-column: 1 / 2;
-  grid-row: 3 / 4;
-}
-.companies__container div:nth-child(8) {
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-}
-.companies__container div:nth-child(9) {
-  grid-column: 3 / 4;
-  grid-row: 3 / 4;
-}
-.companies__container div:nth-child(10) {
-  grid-column: 1 / 2;
-  grid-row: 4 / 5;
-}
-.companies__container div:nth-child(11) {
-  grid-column: 2 / 3;
-  grid-row: 4 / 5;
-}
-.companies__container div:nth-child(12) {
-  grid-column: 3 / 4;
-  grid-row: 4 / 5;
-}
 /* * ============================== */
 /* * ========== CONTACT =========== */
 /* * ============================== */
@@ -559,6 +510,7 @@ main {
   background: transparent;
   flex-direction: column;
 }
+
 .contact__cta  {
   position: relative;
   margin-left: 10vh;
@@ -577,15 +529,6 @@ main {
 	color: var(--light-color);
 	text-shadow: 2px 2px 5px var(--primary-color);
 	padding-left: 5px;
-}
-
-/* * ============================== */
-/* * ========== FOOTER ============ */
-/* * ============================== */
-
-footer .navbar {
-	position: sticky;
-	bottom: 0;
 }
 
 /* * ============================== */
@@ -619,10 +562,12 @@ footer .navbar {
 	.cover {
 		background-image: url("https://i.ibb.co/1KDzfv9/ing-gustavo-gonzalez-color-medium.jpg");
 	}
+
 	.about {
 		height: 100vh;
 		background-image: url('https://i.ibb.co/qJkqzmH/about-ing-gustavo-gonzalez-medium.jpg');
 	}
+
 	.contact {
 		background-image: url("https://i.ibb.co/JH6sdY2/contact-ing-gustavo-gonzalez-medium.jpg");
 	}
@@ -646,7 +591,7 @@ footer .navbar {
 	.cover {
 		flex-direction: column-reverse;
 		justify-content: space-between;
-		height: 100vh;
+		height: calc(100vh - 2.6rem);	
 		padding: 0;
 		background-image: url("https://i.ibb.co/HpF83zL/ing-gustavo-gonzalez-color-small.jpg");
 		background-position-x:right;
@@ -707,71 +652,6 @@ footer .navbar {
 		text-shadow: 1px 1px 0px var(--primary-color);
 	}
 	
-	.companies__container {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(6, 1fr);
-		margin: 0 auto;
-		background: var(--secundary-color);
-	}
-	
-	.companies__container div {
-		width: 35vw;
-		height: 35vw;
-	}
-	.companies__container img {
-		width: 35vw;
-		height: 35vw;
-	}
-	.companies__container div:nth-child(1) {
-		grid-column: 1 / 2;
-		grid-row: 1 / 2;
-	}
-	.companies__container div:nth-child(2) {
-		grid-column: 2 / 3;
-		grid-row: 1 / 2;
-	}
-	.companies__container div:nth-child(3) {
-		grid-column: 1 / 2;
-		grid-row: 2 / 3;
-	}
-	.companies__container div:nth-child(4) {
-		grid-column: 2 / 3;
-		grid-row: 2 / 3;
-	}
-	.companies__container div:nth-child(5) {
-		grid-column: 1 / 2;
-		grid-row: 3 / 4;
-	}
-	.companies__container div:nth-child(6) {
-		grid-column: 2 / 3;
-		grid-row: 3 / 4;
-	}
-	.companies__container div:nth-child(7) {
-		grid-column: 1 / 2;
-		grid-row: 4 / 5;
-	}
-	.companies__container div:nth-child(8) {
-		grid-column: 2 / 3;
-		grid-row: 4 / 5;
-	}
-	.companies__container div:nth-child(9) {
-		grid-column: 1 / 2;
-		grid-row: 5 / 6;
-	}
-	.companies__container div:nth-child(10) {
-		grid-column: 2 / 3;
-		grid-row: 5 / 6;
-	}
-	.companies__container div:nth-child(11) {
-		grid-column: 1 / 3;
-		grid-row: 6 / 7;
-	}
-	.companies__container div:nth-child(12) {
-		grid-column: 2 / 3;
-		grid-row: 6 / 7;
-	}
-
 	.work__reference-position {
 		text-align: left;
 	}
